// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegionAdminSettings should be invalid for bad id 1`] = `
Object {
  "id": Object {
    "key": "yup:string.uuid",
    "options": Object {
      "path": "id",
    },
  },
}
`;

exports[`RegionAdminSettings should be invalid for bad sku 1 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`RegionAdminSettings should be invalid for bad sku 2 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`RegionAdminSettings should be invalid for empty cover image 1`] = `
Object {
  "coverImage": Object {
    "mobile": Object {
      "key": "yup:string.min",
      "options": Object {
        "min": 1,
        "path": "coverImage.mobile",
      },
    },
  },
}
`;

exports[`RegionAdminSettings should be invalid for empty sku 1`] = `
Object {
  "sku": "yup:string.sku",
}
`;

exports[`RegionAdminSettings should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`RegionAdminSettings should be invalid for float size 1`] = `
Object {
  "mapsSize": Object {
    "key": "yup:number.integer",
    "options": Object {
      "path": "mapsSize",
    },
  },
}
`;

exports[`RegionInput should be invalid for bad bounds 1`] = `
Object {
  "bounds": Object {
    "key": "yup:array.min",
    "options": Object {
      "min": 3,
      "path": "bounds",
    },
  },
}
`;

exports[`RegionInput should be invalid for bad id 1`] = `
Object {
  "id": Object {
    "key": "yup:string.uuid",
    "options": Object {
      "path": "id",
    },
  },
}
`;

exports[`RegionInput should be invalid for bad pois 1`] = `
Object {
  "pois": Array [
    ,
    Object {
      "id": Object {
        "key": "yup:string.uuid",
        "options": Object {
          "path": "pois[1].id",
        },
      },
    },
  ],
}
`;

exports[`RegionInput should be invalid for bad season numeric (bad half-month) 1`] = `
Object {
  "seasonNumeric": Array [
    ,
    Object {
      "key": "yup:number.max",
      "options": Object {
        "max": 23,
        "path": "seasonNumeric[1]",
      },
    },
    Object {
      "key": "yup:number.min",
      "options": Object {
        "min": 0,
        "path": "seasonNumeric[2]",
      },
    },
  ],
}
`;

exports[`RegionInput should be invalid for bad season numeric (too many items) 1`] = `
Object {
  "seasonNumeric": Object {
    "key": "yup:array.max",
    "options": Object {
      "max": 24,
      "path": "seasonNumeric",
    },
  },
}
`;

exports[`RegionInput should be invalid for empty name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`RegionInput should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`RegionInput should be invalid for null bounds 1`] = `
Object {
  "bounds": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "array",
    },
  },
}
`;

exports[`RegionInput should be invalid for null name 1`] = `
Object {
  "name": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "string",
    },
  },
}
`;
